--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/auth-helpers-react": "^0.15.0",
+    "@supabase/storage-js": "^2.90.1",
+    "@supabase/supabase-js": "^2.90.1",
     "@syncfusion/ej2": "^32.1.20",
     "@syncfusion/ej2-base": "^32.1.19",
     "@syncfusion/ej2-documenteditor": "^32.1.20",
